# typescript-to-gdscript

./: .gitignore  Cargo.toml  README.md  deno.json  gdscript-model.gd.tmpl  main_test.ts  rustfmt.toml
.github/workflows/: ci.yaml  release.yaml  release.yml
output/: TestInterface.gd
src/: main.rs  model_context.rs
test-fixtures/: any-kind.ts  base-imported-interface.ts  imported-interface.ts  int.ts  package-lock.json  package.json  team-id.ts  test-interface.ts
